# wagtail_debug_button

./: Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
home/: models.py  views.py  wagtail_hooks.py
wagtail_debug_button/: urls.py  wsgi.py
wagtail_debug_button/settings/: base.py  dev.py
wagtail_debug_button/templates/: base.html
