[tool.poetry]
name = "wagtail_debug_button"
version = "0.1.0"
description = ""
authors = ["Fabien Le Frapper <contact@fabienlefrapper.me>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^3.0.1"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
